--- a/src/app/carousels/Testimonials/Testimonials.module.scss
+++ b/src/app/carousels/Testimonials/Testimonials.module.scss
@@ -31,7 +31,7 @@
 
     .icon {
       margin-right: 10px;
-      color: $primary-blue;
+      color: $dark-blue;
       font-size: 30px;
     }
   }
