--- a/src/app/carousels/Gratitude/Gratitude.module.scss
+++ b/src/app/carousels/Gratitude/Gratitude.module.scss
@@ -37,11 +37,28 @@
     transform: translateX(100%); // Slides out of view during transition
   }
 
+  .header {
+    font-size: 36px;
+    color: $dark-blue;
+    margin-bottom: 20px;
+    font-weight: bold;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    .icon {
+      margin-right: 10px;
+      color: $dark-blue;
+      font-size: 30px;
+    }
+  }
+s
+
   .overlay {
     width: 100%;
     height: 100%;
     border-radius: 30px;
-    background: rgba(4, 85, 226, 0.1); // Dark overlay for contrast
+    background: rgba(4, 85, 226, 0.4); // Dark overlay for contrast
     display: flex;
     align-items: center;
     justify-content: center;
