--- a/src/app/carousels/Gratitude/Gratitude.module.scss
+++ b/src/app/carousels/Gratitude/Gratitude.module.scss
@@ -51,14 +51,18 @@
       color: $dark-blue;
       font-size: 30px;
     }
+    &:hover{
+      cursor: pointer;
+      text-decoration: underline;
+    }
   }
-s
+
 
   .overlay {
     width: 100%;
     height: 100%;
     border-radius: 30px;
-    background: rgba(4, 85, 226, 0.4); // Dark overlay for contrast
+    background: rgba(4, 85, 226, 0.4); 
     display: flex;
     align-items: center;
     justify-content: center;
