--- a/src/app/carousels/Project/ProjectSummaryCarousel.module.scss
+++ b/src/app/carousels/Project/ProjectSummaryCarousel.module.scss
@@ -1,5 +1,6 @@
 @import '../../../styles/colors.scss';
 .projectSection {
+    position: relative;
     padding: 40px 7.25rem;
     background-color: $light-blue;
     text-align: center;
@@ -23,6 +24,10 @@
     color: $dark-blue;
     margin-bottom: 20px;
     font-weight: bold;
+    &:hover{
+        text-decoration: underline;
+    }
+  
 }
 
 .sectionIntro {
@@ -58,8 +63,9 @@
     height: 100%;
     background-size: cover;
     background-position: 50% 35%;
-    opacity: 0;
-    transition: opacity 1s ease-in-out;
+    opacity: 1;
+    transition: background-image 0.5s ease-in-out;
+    //transition: opacity 1s ease-in-out;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -68,7 +74,7 @@
 }
 
 .slide.active {
-    opacity: 1;
+    //opacity: 0;
 }
 
 .overlay {
@@ -77,7 +83,6 @@
     border-radius: 8px;
     color: #fff;
     max-width: 80%;
-}
 
 h3 {
     font-size: 28px;
@@ -91,7 +96,6 @@ p {
     margin-bottom: 15px;
     color: #fff;
 }
-
 a {
     font-size: 16px;
     color: $primary-blue;
@@ -107,4 +111,58 @@ a {
         color: #fff;
     }
 }
+
 }
+.learnMore{
+    font-size: 16px;
+    color: $primary-blue;
+    text-decoration: none;
+    font-weight: bold;
+    padding: 10px 20px;
+    border: 2px solid $primary-blue;
+    border-radius: 5px;
+    transition: background-color 0.3s ease, color 0.3s ease;
+
+    &:hover {
+        background-color: $hover-blue;
+        color: #fff;
+    }
+}
+}
+
+.controls {
+    position: absolute;
+    top: 50%;
+    left: 3%;
+    right: 3%;
+    display: flex;
+    justify-content: space-between;
+    transform: translateY(-50%);
+    z-index: 1;
+  }
+
+  .prevButton,
+  .nextButton {
+  //  background: rgba(255, 255, 255, 0.8);
+  z-index: 1000;
+    border: none;
+    font-size: 32px;
+    padding: 10px;
+    cursor: pointer;
+    border-radius: 50%;
+    transition: background 0.3s, transform 0.3s;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: $primary-blue;
+
+    &:hover {
+      //background:  $primary-blue;
+      transform: scale(1.1); // Slightly increase size on hover
+    }
+    .icon {
+        color: $primary-blue;
+        font-size: 50px; // Increased size for better visibility
+      }
+  }
+
