--- a/components/styles/Footer.module.scss
+++ b/components/styles/Footer.module.scss
@@ -1,23 +1,35 @@
 @import '../../src/styles/colors.scss';
-
 .footer {
-  background-color: $light-blue;
+  overflow: hidden;
+  background-color: #f5f7f9;
   padding: 2rem 7.125rem;
-  border-top: 1px solid $border-blue;
+  border-top: 1px solid #d1e7f5;
   box-shadow: 0 -4px 6px -2px rgba(0, 51, 102, 0.1);
-  font-family: $font-family-base;
+  font-family: 'Mulish', sans-serif;
+
   @media (max-width: 1200px) {
-    padding: 2rem 4rem; 
+    padding: 2rem 4rem;
   }
+
   @media (max-width: 900px) {
     padding: 1rem 1.5rem;
   }
 
   .footerContent {
-    display: flex;
+    display: grid;
+    grid-template-columns: 50% 40%;
     justify-content: space-between;
     align-items: center;
-    flex-wrap: wrap;
+    @media (max-width: 1200px) {
+      grid-template-columns: 65% 30%;
+    }
+    @media (max-width: 768px) {
+      display: flex;
+      flex-direction: column;
+     // width: 100%;
+    }
+   // flex-wrap: wrap;
+ 
 
     .leftSection {
       .logo {
@@ -34,14 +46,14 @@
         .logoText {
           h1 {
             margin: 0;
-            font-size: $font-size-biggest;
+            font-size: 1.25rem;
             font-weight: 600;
-            color: #0a0b0c; /* Darker blue for the name */
+            color: #0a0b0c;
           }
 
           span {
-            font-size: $font-size-normal;
-            color: $primary-blue; /* Medium blue for the subtitle */
+            font-size: 1rem;
+            color: #1e90ff;
           }
         }
       }
@@ -49,14 +61,16 @@
       .contactInfo {
         p {
           margin: 0.5rem 0;
-          font-size: $font-size-small;
-          color: $dark-blue;
+          font-size: 0.875rem;
+          color: #0056b3;
 
           strong {
-            font-weight: $font-weight-bold;
+            font-weight: 700;
           }
         }
       }
+
+     
     }
 
     .rightSection {
@@ -69,7 +83,7 @@
         gap: 1.5rem;
 
         a {
-          color: $primary-blue;
+          color: #1e90ff;
           font-size: 1.5rem;
           transition: opacity 0.3s ease;
 
@@ -79,28 +93,193 @@
         }
       }
 
-      .copyright {
-        margin-top: 1rem;
-        font-size: $font-size-small;
-        color: $dark-blue;
+      
+  }
+
+  @media (max-width: 768px) {
+    .footer {
+      padding: 2rem;
+
+      .footerContent {
+        flex-direction: column;
+        align-items: flex-start;
+
+        .rightSection {
+          align-items: flex-start;
+          margin-top: 1.5rem;
+        }
       }
     }
   }
 }
 
-// Responsive Styles
-@media (max-width: 768px) {
-  .footer {
-    padding: 2rem;
+.trustcode{
+  display: flex;
+justify-content: space-between;
+  align-items: center;
+  padding:0;
+  margin: 0;;
+  @media (max-width: 768px) {
+   // align-items: flex-end;
+   padding:0;
+   margin: 0;;
+  }
+  @media (max-width: 600px) {
+    display: flex;
+    flex-direction: column;
+  }
+}
+.trustcode2{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  gap:1rem;
+  @media (max-width: 1200px) {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: flex-end;
+  }
+  @media (max-width: 768px) {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+   // padding: 1rem 2rem;
+  }
+  @media (max-width: 600px) {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+   // padding: 0rem;
+  }
+}
 
-    .footerContent {
-      flex-direction: column;
-      align-items: flex-start;
+.QRcode {
+  position: relative;
+  cursor: pointer;
+  @media (max-width: 650px) {
+    display: flex;
+    flex-direction: column;
+    align-self: center;
+    justify-content: center;
+  }
 
-      .rightSection {
-        align-items: flex-start;
-        margin-top: 1.5rem;
+  img {
+    width: 150px;
+    height: 150px;
+    transition: transform 0.3s ease-in-out;
+    @media (max-width: 1000px) {
+      width: 100px;
+      height: 100px;
+    }
+  
+  }
+
+  span {
+    display: block;
+    text-align: center;
+    @media (max-width: 1000px) {
+      font-size: 0.8rem;
+      white-space: nowrap;
+    }
+  }
+}
+
+.enlargedOverlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.7); // Black overlay with transparency
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000000;
+}
+
+.enlargedQRCode {
+  position: relative;
+
+  img {
+    width: 400px; // Enlarged QR code size
+    height: 400px;
+    z-index: 100000;
+    @media (max-width: 768px) {
+      width: 250px;
+      height: 250px;
+    }
+  }
+
+  .closeButton {
+    position: absolute;
+    top: -80px;
+    right: -40px;
+    background-color: #fff;
+    border: none;
+    color: #000;
+    font-size: 24px;
+    cursor: pointer;
+    z-index: 102;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: background-color 0.2s;
+
+    &:hover {
+      background-color: rgba(255, 255, 255, 0.8);
+    }
+  }
+}
+
+.trustItems{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  @media (max-width: 768px) {
+   flex-direction: column;
+   }
+  @media (max-width: 650px) {
+   
+   }
+  div{
+    margin-top: -3rem;
+    margin-right: -3rem;
+    img{
+      width:10rem;
+      @media (max-width: 768px) {
+        margin-top: 3rem;
+       width:10rem;
+       }
+    }
+    &:nth-of-type(2){
+      margin-top: -3rem;
+      margin-bottom: -5rem;
+      img{
+       width:19rem;
+        @media (max-width: 768px) {
+          margin-top: -0.2rem;
+          margin-bottom: 3rem;
+        }
       }
     }
   }
+  
+}
+
+.copyright {
+  margin-top: 1rem;
+  font-size: 0.875rem;
+  color: #0056b3;
+  p{
+    align-self: flex-end;
+    text-align: right;
+  }
+}
 }
