--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -60,3 +60,32 @@ img, video {
   max-width: 100%;
   overflow-x: hidden;
 }
+
+::-webkit-scrollbar {
+  width: 12px;
+  border-radius: 20px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #f5f7f9;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #1e90ff;
+  border-radius: 20px;
+  border: 3px solid #f5f7f9;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #1c86ee;
+}
+
+::-webkit-scrollbar-corner {
+  background-color: #d1e7f5;
+}
+
+* {
+  scrollbar-width: thin;
+  scrollbar-color: #1e90ff #f5f7f9;
+}
