--- a/src/app/honors-awards/HonorsAndAwards.module.scss
+++ b/src/app/honors-awards/HonorsAndAwards.module.scss
@@ -347,7 +347,7 @@
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
-      //background: url('../../../public//img/play-button.svg') no-repeat center center;
+      //background: url('../../../public/img/play-button.svg') no-repeat center center;
       background-size: contain;
       width: 100px;
       height: 100px;
