--- a/components/styles/Navbar.module.scss
+++ b/components/styles/Navbar.module.scss
@@ -237,32 +237,26 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-between; /* Adjust alignment to fit images */
+  //  justify-content: space-between; 
     margin-top: 3rem;
     margin-bottom: 2rem;
-    overflow: hidden; /* Prevent scrolling due to animation */
-    
+    position: relative;
+    overflow: hidden; 
+    width:100%;
     div {
-      position: absolute;
-      //width: 100%; 
+      position: relative;
+      width: 100%;
       animation: moveLeft 6s infinite ease-in-out;
-      margin-left: 25%;
-      @media (min-width: 500px) {
-        margin-left: 40%;
+      animation-fill-mode: forwards;
+     // margin-left: 50%;
+      &:nth-of-type(1) {
+        margin-left: 30%;
       }
-      
       &:nth-of-type(2) {
         animation-delay: 3s;
-        margin-left: 10%;
-        @media (min-width: 500px) {
-          margin-left: 25%;
-        }
-        
-        img {
-          width: 19rem;
-        }
+        margin-left: -110%;
       }
-      
+
       img {
         width: 10rem;
       }
@@ -271,11 +265,11 @@
 
   @keyframes moveLeft {
     0% {
-      transform: translateX(100%); /* Start off-screen to the right */
+      transform: translateX(90%); 
       opacity: 0;
     }
     10% {
-      transform: translateX(0); /* Arrive at the center */
+      transform: translateX(0); 
       opacity: 1;
     }
     40% {
@@ -283,19 +277,20 @@
       opacity: 1;
     }
     60% {
-      transform: translateX(-100%); 
+      transform: translateX(-90%); 
       opacity: 1;
     }
     90% {
-      transform: translateX(-100%);
+      transform: translateX(-90%);
       opacity: 0;
     }
     100% {
-      transform: translateX(-100%); 
+      transform: translateX(-90%); 
       opacity: 0;
     }
   }
 }
+
 
 .qrsinfo{
   display:flex;
