--- a/components/styles/TopBar.module.scss
+++ b/components/styles/TopBar.module.scss
@@ -115,7 +115,7 @@
   .topBar {
     position:fixed;
     z-index:10000;
-    width:100%;
+    max-width:100%;
   .contactInfo, .socialMedia {
    // display: none;
     height: 0;
