--- a/src/app/carousels/Project/ProjectSummaryCarousel.module.scss
+++ b/src/app/carousels/Project/ProjectSummaryCarousel.module.scss
@@ -157,7 +157,7 @@ a {
   .prevButton,
   .nextButton {
   //  background: rgba(255, 255, 255, 0.8);
-  z-index: 1000;
+ // z-index: 1000;
     border: none;
     font-size: 32px;
     padding: 10px;
