--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -8,11 +8,11 @@ $light-blue: #f5f7f9; // Light blue background
 $border-blue: #d1e7f5; // Light blue border
 $hover-blue: #1c86ee; // Blue color for hover effects
 
-$font-size-smallest: 0.75rem;  /* 12px */
-$font-size-small: 0.875rem;    /* 14px */
-$font-size-normal: 1rem;       /* 16px */
-$font-size-big: 1.125rem;      /* 18px */
-$font-size-biggest: 1.25rem;   /* 20px */
+$font-size-smallest: 0.75rem;  /
+$font-size-small: 0.875rem;   
+$font-size-normal: 1rem;      
+$font-size-big: 1.125rem;      
+$font-size-biggest: 1.25rem;   
 
 $font-family-base: 'Mulish', sans-serif;
 $font-weight-normal: 400;
@@ -53,4 +53,48 @@ $font-weight-bold: 700;
         font-size: 1.5rem !important;
         line-height: 2rem;
       }
+}
+
+.contentSS {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    //margin: 2rem auto;
+    padding: 2rem 7.125rem;
+    background-color: #fff;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
+    margin-bottom: 2rem;
+    @media (max-width: 1200px) {
+        padding: 1rem 4rem;
+      }
+      @media (max-width: 900px) {
+        padding: 1rem 1.5rem;
+      }
+    
+      h2 {
+        color: $dark-blue;
+        font-weight: $font-weight-bold;
+        position: relative;
+        padding-bottom: 0.5rem;
+        text-transform: uppercase;
+        letter-spacing: 1px;
+
+        &::after {
+            content: '';
+            position: absolute;
+            left: 0%; 
+            
+            bottom: 0;
+            width: 50px;
+            height: 3px;
+            background-color: $hover-blue;
+            border-radius: 3px;
+            @media (max-width: 900px) {
+               left:50%;
+               transform: translateX(-50%); 
+        }
+    }
+    }
 }
