--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -8,7 +8,7 @@ $light-blue: #f5f7f9; // Light blue background
 $border-blue: #d1e7f5; // Light blue border
 $hover-blue: #1c86ee; // Blue color for hover effects
 
-$font-size-smallest: 0.75rem;  /
+$font-size-smallest: 0.75rem;  
 $font-size-small: 0.875rem;   
 $font-size-normal: 1rem;      
 $font-size-big: 1.125rem;      
