--- a/src/app/carousels/honors-awards/HonorsAndAwards.module.scss
+++ b/src/app/carousels/honors-awards/HonorsAndAwards.module.scss
@@ -3,7 +3,7 @@
 .honorsSection {
   font-family: 'Mulish', sans-serif;
   overflow-x: hidden !important;
- 
+background-color: $light-blue;
   .heroSection {
     position: relative;
     display: flex;
