--- a/src/app/carousels/honors-awards/Vitals.module.scss
+++ b/src/app/carousels/honors-awards/Vitals.module.scss
@@ -2,7 +2,7 @@
 .vitalsSection {
  // padding: 2rem;
   //background-color: #f8f9fa;
-
+  background-color: $light-blue;
 
   .content {
     display: flex;
@@ -11,7 +11,7 @@
     width: 100%;
    // margin: 2rem auto;
     padding: 0rem 7.125rem;
-    background-color: #fff;
+    background-color: $light-blue;
     //box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
     margin-bottom: 2rem;
