--- a/src/app/carousels/Testimonials/PatientTestimonial.module.scss
+++ b/src/app/carousels/Testimonials/PatientTestimonial.module.scss
@@ -1,17 +1,28 @@
 @import '../../../styles/colors.scss'; // Ensure consistency with colors
 
+
+.vitalsSection{
+  background-color: $light-blue;
+ padding-bottom: 2rem;
+}
 .container {
-  padding: 2rem 7.125rem; // Consistent padding with other sections
+  padding: 0rem 7.125rem;
+  @media (max-width: 1200px) {
+    padding: 1rem 4rem;
+  }
+  @media (max-width: 900px) {
+    padding: 1rem 1.5rem;
+  } // Consistent padding with other sections
   background-color: $light-blue; // Using the light blue background
 }
 
-.sectionTitle {
+/*.sectionTitle {
   color: $primary-blue;
   font-size: 24px;
   font-weight: bold;
   margin-bottom: 2rem;
   text-align: center;
-}
+}*/
 
 .testimonialsGrid {
   display: grid;
