--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -100,9 +100,9 @@ $font-weight-bold: 700;
     }
     
     p {
-      font-size: $font-size-big;
+      font-size: $font-size-biggest;
       line-height: 1.6;
-      margin-bottom: 1.5rem;
+      margin-top: 0.5rem;
       color: $dark-blue;
       text-align: center;
   }
