--- a/src/app/carousels/honors-awards/SurgeonReview.module.scss
+++ b/src/app/carousels/honors-awards/SurgeonReview.module.scss
@@ -49,6 +49,7 @@
         padding: 1rem 4rem;
       }
       @media (max-width: 900px) {
+        flex-direction: column-reverse;
         padding: 1rem 1.5rem;
       }
 }
