--- a/src/app/carousels/honors-awards/Vitals.module.scss
+++ b/src/app/carousels/honors-awards/Vitals.module.scss
@@ -9,10 +9,8 @@
     flex-direction: column;
     align-items: center;
     width: 100%;
-   // margin: 2rem auto;
     padding: 0rem 7.125rem;
     background-color: $light-blue;
-    //box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
     margin-bottom: 2rem;
     @media (max-width: 1200px) {
@@ -22,11 +20,16 @@
         padding: 1rem 1.5rem;
       }
 }
+
 .reviewsContainer {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
   gap: 2rem;
   padding: 2rem 0;
+  @media (max-width: 900px) {
+    display: flex;
+    flex-direction: column;
+}
 }
 
 .reviewCard {
@@ -73,8 +76,8 @@
       background-color: $hover-blue;
       border-radius: 3px;
       @media (max-width: 900px) {
-         left:50%;
-         transform: translateX(-50%); 
+      //   left:50%;
+      //   transform: translateX(-50%); 
   }
 }
 }
