--- a/components/styles/Footer.module.scss
+++ b/components/styles/Footer.module.scss
@@ -7,25 +7,23 @@
   box-shadow: 0 -4px 6px -2px rgba(0, 51, 102, 0.1);
   font-family: 'Mulish', sans-serif;
 
-  @media (max-width: 1200px) {
-    padding: 2rem 4rem;
+  @media (max-width: 1400px) {
+    padding: 1rem 4rem;
   }
-
-  @media (max-width: 900px) {
+  @media (max-width: 1200px) {
     padding: 1rem 1.5rem;
   }
-
   .footerContent {
-    display: grid;
-    grid-template-columns: 50% 40%;
+    display: flex;
+   // grid-template-columns: 50% 40%;
     justify-content: space-between;
     align-items: center;
     @media (max-width: 1200px) {
-      grid-template-columns: 65% 30%;
+      //grid-template-columns: 65% 30%;
     }
     @media (max-width: 768px) {
       display: flex;
-      flex-direction: column;
+     flex-direction: column;
      // width: 100%;
     }
    // flex-wrap: wrap;
@@ -76,7 +74,7 @@
     .rightSection {
       display: flex;
       flex-direction: column;
-      align-items: flex-end;
+     // align-items: flex-end;
 
       .socialMedia {
         display: flex;
@@ -108,6 +106,7 @@
           align-items: flex-start;
           margin-top: 1.5rem;
         }
+       
       }
     }
   }
@@ -160,10 +159,10 @@ justify-content: space-between;
 .QRcode {
   position: relative;
   cursor: pointer;
-  @media (max-width: 650px) {
+  @media (max-width: 768px) {
     display: flex;
     flex-direction: column;
-    align-self: center;
+    align-self: flex-end;
     justify-content: center;
   }
 
