--- a/components/styles/Footer.module.scss
+++ b/components/styles/Footer.module.scss
@@ -282,3 +282,61 @@ justify-content: space-between;
   }
 }
 }
+
+.memberOrgs {
+  text-align: center;
+  margin-top: 20px;
+  background-color: $light-blue;  
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  margin-bottom: 1rem;
+  h1 {
+    margin-bottom: 15px;
+    color: $dark-blue;  
+    font-size: 25px;
+    font-weight: 700;
+  }
+  .orgLogos {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex:wrap;
+    gap: 20px;  
+
+    img {
+      height: 50px;
+      transition: transform 0.3s ease, box-shadow 0.3s ease; 
+
+      &:hover {
+        transform: scale(1.05);  
+        box-shadow: 0 6px 8px rgba(0, 0, 0, 0.15);
+      }
+    }
+  }
+}
+
+@keyframes slideIn {
+  0% {
+    transform: translateX(100%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+@media (max-width: 900px) { 
+  .memberOrgs .orgLogos {
+    overflow-x: hidden;
+    display: block;  
+
+    img {
+      display: inline-block;
+      width: auto;  // Adjust width as necessary
+      margin-right: 10px;  // Ensure there is space between logos
+      animation: slideIn 0.5s ease-out forwards;  // Apply the animation
+    }
+  }
+}
+
