--- a/components/styles/Navbar.module.scss
+++ b/components/styles/Navbar.module.scss
@@ -66,7 +66,7 @@
       border-radius: 50%;
       height: 8rem;
       margin-right: 10px;
-      @media (max-width: 768px) {
+      @media (max-width: 900px) {
         height: 5rem;
       }
     }
@@ -78,19 +78,22 @@
       
       h1 {
         margin: 0;
-        font-size: 40px;
+        font-size: 35px;
         font-weight: 600;
         color: #0a0b0c ; 
         white-space: nowrap;
-        @media (max-width: 768px) {
+        @media (max-width: 1200px) {
+          font-size: 35px;
+        }
+        @media (max-width: 900px) {
           font-size: 20px;
         }
       }
 
       span {
-        font-size: 28px;
+        font-size: 20px;
         color: $primary-blue; 
-        @media (max-width: 768px) {
+        @media (max-width: 900px) {
           font-size: 15px;
         }
       }
