--- a/src/app/Herosection/HeroSection.module.scss
+++ b/src/app/Herosection/HeroSection.module.scss
@@ -4,18 +4,18 @@
   display: flex;
   align-items: center;
   justify-content: flex-start;
-  height: 40rem;
+  height: 30rem;
   color: white;
   padding: 0;
   background-size: cover;
-  background-position: center;
+  background-position: top;
   background-repeat: no-repeat;
   transition: background-image 0.5s ease-in-out;
   @media (max-width: 1024px) {
-    height:30rem;
+    height:25rem;
   }
   @media (max-width: 900px) {
-    height:30rem;
+    height:20rem;
   }
   
 
