--- a/src/app/Project/ProjectComponent.module.scss
+++ b/src/app/Project/ProjectComponent.module.scss
@@ -94,7 +94,7 @@
             background-color: #fff;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             border-radius: 8px;
-            overflow: hidden;
+           // overflow: hidden;
             transition: transform 0.3s ease;
             text-align: center;
             display: flex;
