--- a/src/app/Gratitude/components/Gratitude.module.scss
+++ b/src/app/Gratitude/components/Gratitude.module.scss
@@ -197,7 +197,11 @@
       color: $primary-blue;
       font-weight: 700;
     }
-
+    a{
+      p:hover{
+        text-decoration: underline;
+      }
+    }
     p {
       color: $primary-blue;
     }
