--- a/components/styles/Navbar.module.scss
+++ b/components/styles/Navbar.module.scss
@@ -21,10 +21,9 @@
   }
   .left {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-between !important;
     align-items: center;
     width:100%;
-    //margin-top: -3.5rem;
     @media (max-width: 768px) {
       margin-top: 0.1rem;
     }
@@ -403,4 +402,21 @@ justify-content: space-between;
       background-color: rgba(255, 255, 255, 0.8);
     }
   }
+}
+
+.centerIcon {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+ // width:50%;
+   
+  .image {
+    width: 22%;
+  }
+}
+
+.rightText{
+  display: flex;
+  gap:1rem;
+  align-items: center;
 }
