--- a/src/app/Videos/lectures/lecture.module.scss
+++ b/src/app/Videos/lectures/lecture.module.scss
@@ -191,7 +191,7 @@
   gap: 2rem;
   width: 100%;
   justify-content: center;
-  padding: 2rem 7.125rem;
+  //padding: 2rem 7.125rem;
 
   @media (max-width: 1200px) {
     padding: 2rem 4rem;
